--- a/frontend/src/components/Layout/Layout.scss
+++ b/frontend/src/components/Layout/Layout.scss
@@ -1,11 +1,14 @@
-header{
-  min-height:2rem;
+.layout {
+  display: flex;
+  flex-direction: column;
+  overflow-x: hidden;
+}
+
+
+main {
+  flex: 1 1 auto;
 }
 
 footer{
-  position: fixed;
-  bottom: 0;
-  min-height:2rem;
-  padding-bottom: 32px;
-  width: 95%;
+
 }
