--- a/frontend/src/pages/HomePage/HomePage.scss
+++ b/frontend/src/pages/HomePage/HomePage.scss
@@ -1,7 +1,14 @@
 
 .wrapper {
 	text-transform: uppercase;
-	padding-top: 32px;
+
+	display: flex;
+	flex-direction: column;
+
+	main {
+		flex: 1 1 auto;
+	}
+
 
 	button {
 		padding: 12px 24px;
@@ -18,6 +25,10 @@
 	}
 
 	&_homepage {
+
+		display: flex;
+		flex-direction: column;
+		height: 100vh;
 
 		.title {
 			padding-bottom: 48px;
@@ -106,9 +117,7 @@
 
 		.footer_homepage {
 
-			position: fixed;
-			bottom: 0;
-			width: 95%;
+			width: 100%;
 			display: flex;
 			flex-direction: row;
 			justify-content: space-between;
