--- a/frontend/src/components/ToolComponents/VideoPlayer/VideoPlayer.scss
+++ b/frontend/src/components/ToolComponents/VideoPlayer/VideoPlayer.scss
@@ -1,14 +1,69 @@
+@import '../../../styles/_variables.scss';
+
+html {
+  overflow-y: hidden;
+}
+
 .video-container {
-  background-color: gray;
-  height: 90%;
-}
 
-.player {
-  background-color: red;
-}
-
-video {
+  position: absolute;
+  top: 0;
+  left: 0;
+  object-fit: cover;
   width: 100%;
-  height: auto;
+  height: 100%;
+  background-color: black;
+
 }
 
+.video-container__body {
+  position: absolute;
+  top: 0;
+  left: 0;
+  object-fit: cover;
+  width: 100%;
+  height: 100%;
+  //background-color: rgba(0,0,0,0.6);
+  z-index: 2;
+  display: flex;
+  flex: 1 1 auto;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+.video-container__controls {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  width: 40%;
+
+
+  svg {
+    transform: scale(1.2);
+    color: $white;
+  }
+}
+
+//.video-container__overlay {
+//  width: 100%;
+//  height: 100%;
+//  background-color: black;
+//  opacity: 20%;
+//}
+
+.video-container__video {
+  object-fit: cover;
+  video {
+    width: 100%    !important;
+    height: auto   !important;
+    object-fit: cover;
+  }
+}
+
+.layout {
+  header, footer, video-container__controls {
+    //display: none;
+  }
+}
