--- a/frontend/src/pages/ArticlePages/ArticleScientificPublicationsPage/ArticleScientificPublicationsPagePage.scss
+++ b/frontend/src/pages/ArticlePages/ArticleScientificPublicationsPage/ArticleScientificPublicationsPagePage.scss
@@ -1,12 +1,12 @@
 .scientific_publications {
   &__parent {
+    padding-top: 75px;
     color: white;
     &--leftContainer {
 
     }
     &--rightContainer {
       &-subTitle {
-        padding-bottom: 40px;
         h4 {
           color: #B9B9B9;
           font-size: 16px;
@@ -15,10 +15,17 @@
         }
       }
       &-title {
+        padding-top: 20px;
         h1 {
           font-size: 24px;
           line-height: 32px;
         }
+      }
+      &-menu {
+        height: 525px;
+      }
+      &-goBackButton {
+
       }
     }
   }
