changed base api url & webpack .env file init

--- a/frontend/src/components/Layout/Layout.scss
+++ b/frontend/src/components/Layout/Layout.scss
@@ -21,6 +21,11 @@ footer {
   }
 }
 
+.dont-show-header-footer {
+   header, footer {
+     display: none;
+   }
+}
 
 @media (min-width: 1200px) {
 
