--- a/frontend/src/components/ToolComponents/VideoPlayer/VideoPlayer.scss
+++ b/frontend/src/components/ToolComponents/VideoPlayer/VideoPlayer.scss
@@ -23,7 +23,9 @@ html {
   object-fit: cover;
   width: 100%;
   height: 100%;
+  //
   //background-color: rgba(0,0,0,0.6);
+  //
   z-index: 2;
   display: flex;
   flex: 1 1 auto;
@@ -61,9 +63,29 @@ html {
     object-fit: cover;
   }
 }
-
-.layout {
-  header, footer, video-container__controls {
-    //display: none;
+//////////////////
+header {
+  .overlay {
+    display: none;
   }
 }
+
+
+//header {
+//  display: none;
+//}
+//
+
+  //
+  //.layout {
+  //  header, footer, .video-container__controls {
+  //    display: none;
+  //  }
+  //}
+
+
+//.show {
+//  .video-container__body {
+//    background-color: rgba(0,0,0,0.8);
+//  }
+//}
