--- a/frontend/src/components/ToolComponents/VideoPlayer/VideoPlayer.scss
+++ b/frontend/src/components/ToolComponents/VideoPlayer/VideoPlayer.scss
@@ -41,7 +41,6 @@ html {
   justify-content: space-between;
   width: 40%;
 
-
   svg {
     transform: scale(1.2);
     color: $white;
@@ -64,11 +63,11 @@ html {
   }
 }
 //////////////////
-header {
-  .overlay {
-    display: none;
-  }
-}
+//header {
+//  .overlay {
+//    display: none;
+//  }
+//}
 
 
 //header {
