--- a/frontend/src/components/Breadcrumbs/Breadcrumbs.scss
+++ b/frontend/src/components/Breadcrumbs/Breadcrumbs.scss
@@ -132,18 +132,21 @@ svg {
 
 
 .overlay {
-	z-index: 50;
-	height: 100%;
-	width: 100%;
-	background-color: black;
-	//transition: 0.2s;
 	position: fixed;
+	width: 100%;
+	height: 100%;
 	top: 0;
 	left: 0;
-	 opacity: 90%;
-	// transition: 0.3s;
-	animation:fadeIn 0.2s ease-in-out;
+	right: 0;
+	bottom: 0;
+	background-color: rgba(0,0,0,0);
+	z-index: 2;
+	cursor: pointer;
+	transition: background-color 0.5s ease;
+}
 
+.overlay.active {
+	background-color: rgba(0,0,0,0.8);
 }
 
 .disabled {
