Video Player overlay, controls

--- a/frontend/src/components/Breadcrumbs/Breadcrumbs.scss
+++ b/frontend/src/components/Breadcrumbs/Breadcrumbs.scss
@@ -142,11 +142,15 @@ svg {
 	background-color: rgba(0,0,0,0);
 	z-index: 2;
 	cursor: pointer;
-	transition: background-color 0.5s ease;
+	opacity: 0;
+	visibility: hidden;
+	transition: all 0.5s ease;
 }
 
 .overlay.active {
 	background-color: rgba(0,0,0,0.8);
+	opacity: 1;
+	visibility: visible;
 }
 
 .disabled {
