--- a/frontend/src/styles/libs/normalize.scss
+++ b/frontend/src/styles/libs/normalize.scss
@@ -12,7 +12,7 @@
 
 html, root, .app, .wrapper{
 	height: 100vh;
-
+	cursor: default;
 	-webkit-box-sizing: border-box;
 	-moz-box-sizing:    border-box;
 	-ms-box-sizing:     border-box;
