--- a/frontend/src/components/ToolComponents/VideoPlayer/VideoPlayer.scss
+++ b/frontend/src/components/ToolComponents/VideoPlayer/VideoPlayer.scss
@@ -2,6 +2,7 @@
 
 html {
   overflow-y: hidden;
+
 }
 
 .video-container {
@@ -23,9 +24,6 @@ html {
   object-fit: cover;
   width: 100%;
   height: 100%;
-  //
-  //background-color: rgba(0,0,0,0.6);
-  //
   z-index: 2;
   display: flex;
   flex: 1 1 auto;
@@ -41,11 +39,50 @@ html {
   justify-content: space-between;
   width: 40%;
 
+
   svg {
     transform: scale(1.2);
     color: $white;
   }
+
 }
+
+.video-container__controls > div {
+  padding: 10px;
+}
+
+.video-container__controls__left-buttons:hover,
+.video-container__controls__play-button:hover,
+.video-container__controls__right-buttons:hover {
+  svg path {
+    stroke: $orange;
+  }
+}
+
+
+
+.video-container__overlay {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(0,0,0,0);
+  cursor: pointer;
+  opacity: 0;
+  visibility: hidden;
+  transition: all 0.7s ease;
+}
+
+.video-container__overlay.active {
+  background-color: rgba(0,0,0,0.8);
+  opacity: 1;
+  visibility: visible;
+}
+
+
 
 //.video-container__overlay {
 //  width: 100%;
