--- a/frontend/src/components/ToolComponents/Article/ArticleScientificPublicationsHierarchyMenu/ArticleScientificPublicationsHierarchyMenu.scss
+++ b/frontend/src/components/ToolComponents/Article/ArticleScientificPublicationsHierarchyMenu/ArticleScientificPublicationsHierarchyMenu.scss
@@ -1,60 +1,58 @@
 .scientific_publicationsMenu {
   $offset: 50px;
-  .mainLayerButton {
+
+  .LayerButton {
     background-color: $black;
     border: none !important;
+    font-size: 16px;
+    line-height: 16px;
     display: flex;
     flex-direction: row;
     align-items: center;
     padding: 0 !important;
-   h3 {
-     font-family: RSLight, serif;
-     color: $white;
-   }
+    h3 {
+      font-family: RSLight, serif;
+      color: $white;
+    }
   }
-  .mainLayerBody {
-    .secondLayerButton {
+  .LayerBody {
+    .LayerDownloadButton {
       background-color: $black;
       border: none !important;
-      display: flex;
-      flex-direction: row;
-      align-items: center;
-      padding: 0 0 0 $offset !important;
-      h3 {
-        font-family: RSLight, serif;
-        color: $white;
-      }
+      box-shadow: none;
+      padding: 0 !important;
+      text-transform: none;
     }
-    .secondLayerBody {
-      padding: 0 0 0 $offset;
-      .thirdLayerButton {
-        background-color: $black;
-        border: none !important;
-        display: flex;
-        flex-direction: row;
-        align-items: center;
-        padding: 0 0 0 $offset !important;
-        h3 {
-          font-family: RSLight, serif;
-          color: $white;
-        }
+  }
+
+  .LayerBody.Layer1 {
+    .LayerDownloadButton.Layer1 {
+
+    }
+    .LayerButton.Layer2 {
+      padding: 0 0 0 $offset !important;
+    }
+    .LayerBody.Layer2 {
+      padding: 0 0 0 $offset !important;
+      .LayerDownloadButton.Layer2 {
+
       }
-      .thirdLayerBody {
-        padding: 0 0 0 $offset;
-        .fourthLayerButton {
-          background-color: $black;
-          border: none !important;
-          display: flex;
-          flex-direction: row;
-          align-items: center;
-          padding: 0 0 0 $offset !important;
-          h3 {
-            font-family: RSLight, serif;
-            color: $white;
-          }
+      .LayerButton.Layer3 {
+        padding: 0 0 0 $offset !important;
+      }
+      .LayerBody.Layer3 {
+        padding: 0 0 0 $offset !important;
+        .LayerDownloadButton.Layer3 {
+
         }
-        .fourthLayerBody {
-          padding: 0 0 0 $offset;
+        .LayerButton.Layer4 {
+          padding: 0 0 0 $offset !important;
+        }
+        .LayerBody.Layer4 {
+          padding: 0 0 0 $offset !important;
+          .LayerDownloadButton.Layer4 {
+
+          }
         }
       }
     }
