added GalleryPage proto, added api for exhibits, restructured and refactored few components

--- a/frontend/src/pages/ArticlePages/ArticlePage/ArticlePage.scss
+++ b/frontend/src/pages/ArticlePages/ArticlePage/ArticlePage.scss
@@ -48,7 +48,7 @@
         }
         &__right {
 
-            //&--articleVerticalList {
+            //&--cardVerticalList {
             //}
         }
     }
