--- a/frontend/src/components/CardVerticalList/CardVerticalList.scss
+++ b/frontend/src/components/CardVerticalList/CardVerticalList.scss
@@ -1,6 +1,6 @@
-.article--verticalList__container {
+.card--verticalList__container {
   &__item {
-    .article_card {
+    .card_preview {
       width: 315px;
     }
   }
