--- a/frontend/src/components/CardPreview/CardPreview.scss
+++ b/frontend/src/components/CardPreview/CardPreview.scss
@@ -1,4 +1,4 @@
-.article_card {
+.card_preview {
     display: flex;
     flex-direction: column;
     border: 1px solid #FFFFFF;
@@ -14,6 +14,8 @@
         height: 210px;
     }
     .title {
+        overflow: hidden;
+        text-overflow: ellipsis;
         padding: 10px 10px 25px;
     }
 }
