--- a/frontend/src/pages/GalleryPages/ExhibitPage/ExhibitPage.scss
+++ b/frontend/src/pages/GalleryPages/ExhibitPage/ExhibitPage.scss
@@ -1,67 +1,89 @@
 .exhibit {
   color: $white;
-  &-grid {
-    &__left {
-      &--main {
-        padding-top: 25px;
-        padding-bottom: 20px;
+  .grid {
+    padding-top: 25px;
+    padding-bottom: 20px;
+    .imageSourcesGrid {
+      .container {
+        display: flex;
+        flex-direction: column;
+        gap: 20px;
 
-        &__image {
-          width: 400px;
-          height: 350px;
-          margin: 20px;
-          float: left;
+        .imageContainer {
+          .image {
+            width: 400px;
+            height: 350px;
+          }
         }
 
-        &__subtitle {
+        .sourcesContainer {
+          padding-right: 20px;
+          display: flex;
+          flex-direction: row;
+          align-items: center;
+          gap: 20px;
+          h5 {
+            font-size: 14px;
+            line-height: 20px;
+            text-transform: none;
+            font-family: RSLight, serif;
+            color: #B9B9B9;
+          }
+          .sources {
+            font-size: 14px;
+            line-height: 14px;
+            text-transform: none;
+            font-family: RSLight, serif;
+            color: #B9B9B9;
+          }
+        }
+      }
+    }
+    .middleGrid {
+      .container {
+        display: flex;
+        flex-direction: column;
+        gap: 20px;
+        .title {
+          white-space: normal;
+          overflow: auto;
+          h1 {
+            font-size: 24px;
+            line-height: 32px;
+            font-family: RSRegular, serif;
+          }
+        }
+
+        .subtitle {
           h4 {
             font-size: 16px;
             line-height: 16px;
-            padding-top: 50px;
             color: #B9B9B9;
             font-family: RSLight, serif;
           }
         }
 
-        &__title {
-          h1 {
-            font-size: 24px;
-            line-height: 32px;
-            padding-top: 17px;
-            font-family: RSRegular, serif;
-          }
-        }
-
-        &__sources {
-          //font-size: 14px;
-          //line-height: 20px;
-          //padding-top: 24px;
-          //padding-bottom: 20px;
-          //color: #B9B9B9;
-          //display: flex;
-          //align-items: center;
-        }
-
-        &__content {
-          font-size: 14px;
-          line-height: 20px;
-          padding-top: 32px;
-          color: #B9B9B9;
+        .content {
           white-space: normal;
-          overflow-y: auto;
-          height: 400px;
-          width: 950px;
-          text-align: justify;
+          overflow: auto;
+
+          p {
+            color: #B9B9B9;
+            font-size: 14px;
+            line-height: 20px;
+            white-space: normal;
+            overflow: auto;
+          }
         }
       }
     }
-    &__right {
+    .cardVerticalListGrid {
+      .container {
 
-      //&--cardVerticalList {
-      //}
+      }
     }
   }
-  &--goBackButton {
-    margin-top: 30px;
+  .goBackButton {
+
   }
 }
