--- a/frontend/src/components/Breadcrumbs/Breadcrumbs.scss
+++ b/frontend/src/components/Breadcrumbs/Breadcrumbs.scss
@@ -134,6 +134,9 @@ svg {
 	padding: 0;
 }
 
+.current-instance {
+	padding-left: 10px;
+}
 
 .overlay {
 	position: fixed;
@@ -166,6 +169,7 @@ svg {
 		color: #313131;
 	}
 }
+
 
 
 @keyframes fadeIn {
