--- a/frontend/src/components/Layout/Layout.scss
+++ b/frontend/src/components/Layout/Layout.scss
@@ -4,8 +4,8 @@
   display: flex;
   flex-direction: column;
   overflow-x: hidden;
-  overflow-y: hidden;
-  height: 95vh;
+  overflow-y: auto;
+  height: 100%;
 }
 
 header {
@@ -19,6 +19,12 @@ footer {
   .buttons {
     width: 100%;
   }
+  position: fixed;
+  background-color: black;
+  padding-top: 16px;
+  bottom: 0;
+  height: 40px;
+  width: 95%;
 }
 
 .dont-show-header-footer {
