--- a/frontend/src/components/Layout/Layout.scss
+++ b/frontend/src/components/Layout/Layout.scss
@@ -19,6 +19,7 @@ footer {
   .buttons {
     width: 100%;
   }
+  //background-color: black;
   position: fixed;
   padding-top: 16px;
   bottom: 0;
