--- a/frontend/src/pages/HomePage/HomePage.scss
+++ b/frontend/src/pages/HomePage/HomePage.scss
@@ -125,7 +125,7 @@
 
 		.footer_homepage {
 
-			width: 100%;
+			//width: 100%;
 			display: flex;
 			flex-direction: row;
 			justify-content: space-between;
