full layout structure remade

--- a/frontend/src/pages/ArticlePages/ArticleListPage/ArticleListPage.scss
+++ b/frontend/src/pages/ArticlePages/ArticleListPage/ArticleListPage.scss
@@ -1,17 +1,18 @@
-.article_list {
-    &__content {
-        svg {
-            font-size: xx-large;
-        }
-    }
-}
+//.article_list {
+//    &__content {
+//        svg {
+//            font-size: xx-large;
+//        }
+//    }
+//}
+//
+//
+//.layout {
+//    footer {
+//        padding-bottom: 16px;
+//        .buttons {
+//            width: 100%;
+//        }
+//    }
+//}
 
-
-.layout {
-    footer {
-        padding-bottom: 16px;
-        .buttons {
-            width: 100%;
-        }
-    }
-}
