--- a/frontend/src/components/EarthTypeMenu/EarthTypeMenu.scss
+++ b/frontend/src/components/EarthTypeMenu/EarthTypeMenu.scss
@@ -2,6 +2,8 @@
 @import '../../styles/_variables.scss';
 @import '../../styles/libs/normalize.scss';
 
+
+
 .earth-time-dropdown__btn {
     font-size: 16px;
     cursor: pointer;
@@ -25,6 +27,7 @@
     cursor: pointer;
     color: $white;
     text-decoration: none;
+    text-transform: uppercase;
 }
 
 .earth-time-dropdown__content li {
