--- a/frontend/src/components/Footer/Footer.scss
+++ b/frontend/src/components/Footer/Footer.scss
@@ -1,13 +1,16 @@
 @import "../../styles/variables";
 
-.buttons {
+
+.footer-default {
 	display: flex;
 	justify-content: space-between;
+
 	button {
 		border: 1px solid $gray;
-		font-family: RSRegular;
+		font-family: RSRegular, 'serif';
 		text-transform: uppercase;
-
+		width: 250px;
+		height: 30px;
 		&.btn-deactivated {
 			border: 1px solid #313131;
 			color: #313131;
@@ -16,3 +19,36 @@
 	}
 }
 
+.footer-home {
+
+	//width: 100%;
+	display: flex;
+	flex-direction: row;
+	justify-content: space-between;
+	height: 2.5rem;
+
+	button {
+		border: none;
+		text-transform: none;
+		color: $white;
+		font-family: RSLight, serif;
+		font-style: normal;
+		font-weight: 400;
+		font-size: 14px;
+		line-height: 14px;
+		text-align: center;
+
+		a {
+			text-transform: none;
+			color: #BBBBBB
+		}
+	}
+}
+
+.footer-back {
+	button {
+		width: 150px;
+		height: 30px;
+	}
+
+}
