--- a/frontend/src/components/Layout/Layout.scss
+++ b/frontend/src/components/Layout/Layout.scss
@@ -16,7 +16,7 @@ main {
 }
 
 footer {
-  .buttons {
+  .footer-default {
     width: 100%;
   }
   //background-color: black;
@@ -58,7 +58,7 @@ footer {
     }
     }
       footer {
-        .buttons {
+        .footer-default {
 
           width: 100%;
         }
@@ -88,7 +88,7 @@ footer {
       }
     }
     footer {
-      .buttons {
+      .footer-default {
         width: 100%;
       }
     }
@@ -119,7 +119,7 @@ footer {
 
     }
     footer {
-      .buttons {
+      .footer-default {
 
         width: 100%;
       }
@@ -164,7 +164,7 @@ footer {
       }
     }
     footer {
-      .buttons {
+      .footer-default {
         width: 100%;
       }
     }
