--- a/frontend/src/pages/ArticlePages/ArticlePage/ArticlePage.scss
+++ b/frontend/src/pages/ArticlePages/ArticlePage/ArticlePage.scss
@@ -1,58 +1,63 @@
-.article {
-    color: $white;
-    &-grid {
-        &__left {
-            &--main {
-                padding-bottom: 20px;
+@import "../../../styles/variables";
 
-                &__subtitle {
-                    h4 {
-                        font-size: 16px;
-                        line-height: 16px;
-                        padding-top: 50px;
-                        color: #B9B9B9;
-                        font-family: RSLight, serif;
-                    }
-                }
 
-                &__title {
-                    h1 {
-                        font-size: 24px;
-                        line-height: 32px;
-                        padding-top: 17px;
-                        font-family: RSRegular, serif;
-                    }
-                }
+.article-page {
+    position: relative;
+    z-index: 0;
 
-                &__sources {
-                    font-size: 14px;
-                    line-height: 20px;
-                    padding-top: 24px;
-                    padding-bottom: 20px;
-                    color: #B9B9B9;
-                    display: flex;
-                    align-items: center;
-                }
+    &__left {
+        padding-top: 32px;
+        left: 0;
+        right: 0;
+        top: 0;
+        bottom: 0;
 
-                &__content {
-                    font-size: 14px;
-                    line-height: 20px;
-                    padding-top: 32px;
-                    color: #B9B9B9;
-                    white-space: normal;
-                    overflow-y: auto;
-                    height: 400px;
-                    width: 950px;
-                }
+        &--subtitle {
+            h4 {
+                font-size: 16px;
+                line-height: 16px;
+                padding-top: 50px;
+                color: #B9B9B9;
+                font-family: RSLight, serif;
             }
         }
-        &__right {
 
-            //&--cardVerticalList {
-            //}
+        &--title {
+            h1 {
+                font-size: 24px;
+                line-height: 32px;
+                padding-top: 17px;
+                font-family: RSRegular, serif;
+            }
+        }
+
+        &--sources {
+            font-size: 14px;
+            line-height: 20px;
+            padding-top: 24px;
+            padding-bottom: 20px;
+            color: #B9B9B9;
+            display: flex;
+            align-items: center;
+        }
+
+        &--content {
+            font-size: 14px;
+            line-height: 20px;
+            padding-top: 32px;
+            color: #B9B9B9;
+            white-space: normal;
+            overflow-y: auto;
+            height: 400px;
+            width: 950px;
         }
     }
-    &--goBackButton {
-        margin-top: 30px;
+
+    &__right {
+        left: 50%;
+        right: 0;
+        top: 10%;
+        bottom: 10%;
+        height: 80vh;
     }
 }
