--- a/frontend/src/styles/libs/normalize.scss
+++ b/frontend/src/styles/libs/normalize.scss
@@ -5,7 +5,7 @@
 	padding: 0;
 	list-style: none;
 	outline: none;
-	font-family: RSRegular;
+	font-family: RSRegular, 'serif';
 }
 
 
@@ -15,8 +15,6 @@ html, root, .app, .wrapper{
 	cursor: default;
 	-webkit-box-sizing: border-box;
 	-moz-box-sizing:    border-box;
-	-ms-box-sizing:     border-box;
-	-o-box-sizing:      border-box;
 	box-sizing:         border-box;
 }
 
@@ -38,9 +36,6 @@ body {
 	padding: 32px 32px 0 32px;
 
 }
-
-
-
 
 
 a,
