--- a/frontend/src/components/CardVerticalList/CardVerticalList.scss
+++ b/frontend/src/components/CardVerticalList/CardVerticalList.scss
@@ -1,4 +1,9 @@
 .card--verticalList__container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  min-width: 100%;
+
   &__item {
     .card_preview {
       width: 315px;
