--- a/frontend/src/pages/ArticlePages/ArticlePage/ArticlePage.scss
+++ b/frontend/src/pages/ArticlePages/ArticlePage/ArticlePage.scss
@@ -2,15 +2,10 @@
 
 
 .article-page {
-    position: relative;
-    z-index: 0;
 
     &__left {
         padding-top: 32px;
-        left: 0;
-        right: 0;
-        top: 0;
-        bottom: 0;
+        padding-right: 5%;
 
         &--subtitle {
             h4 {
@@ -42,14 +37,16 @@
         }
 
         &--content {
+
+            word-wrap: break-word;
             font-size: 14px;
             line-height: 20px;
             padding-top: 32px;
             color: #B9B9B9;
             white-space: normal;
+            padding-right: 6px;
+            max-height: 50vh;
             overflow-y: auto;
-            height: 400px;
-            width: 950px;
         }
     }
 
