--- a/frontend/src/styles/app.scss
+++ b/frontend/src/styles/app.scss
@@ -10,7 +10,7 @@
 @import "../pages/ThreeDEarthPage/EarthPage/EarthPage.scss";
 @import "../pages/GalleryPages/ExhibitListPage/ExhibitListPage";
 @import "../pages/GalleryPages/ExhibitPage/ExhibitPage";
-
+@import "../pages/VideoPage/VideoPage";
 // COMPONENTS
 @import "../components/EarthTypeMenu/EarthTypeMenu.scss";
 
