--- a/frontend/src/pages/ThreeDEarthPage/EarthPage/EarthPage.scss
+++ b/frontend/src/pages/ThreeDEarthPage/EarthPage/EarthPage.scss
@@ -17,7 +17,7 @@
 				margin-right: 50px;
 			}
 			button {
-				margin-top: 25px;
+				margin-top: 5px;
 				margin-right: 100px;
 			}
 		}
@@ -27,15 +27,12 @@
 			display: flex;
 			flex-direction: row;
 			justify-content: flex-end;
-			//padding-top: 6px;
 
 			.learn-btn {
-				width: 200px;
+				width: 150px;
 				height: 25px;
 				font-size: 10px;
-				//border: none;
-				//text-transform: none;
-
+				border: 1px solid $white
 			}
 		}
 	}
